--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,14 @@
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
+            "aot": true,  // ✅ Bật AOT Compilation để fix lỗi JIT Compiler
+            "vendorChunk": true, // ✅ Đảm bảo tách vendor files
+            "outputHashing": "all",
+            "extractCss": true,
+            "optimization": true,
+            "sourceMap": false,
+            "namedChunks": false,
+            "commonChunk": true,
             "assets": ["src/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
@@ -29,8 +37,7 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
+            "outputMode": "file",
             "ssr": {
               "entry": "src/server.ts"
             }
@@ -49,9 +56,16 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "aot": true,  // ✅ Bật AOT Compilation cho production
+              "optimization": true,
+              "extractCss": true,
+              "sourceMap": false,
+              "namedChunks": false,
+              "commonChunk": true
             },
             "development": {
+              "aot": true,  // ✅ Bật AOT Compilation cho development
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
