--- a/angular.json
+++ b/angular.json
@@ -90,7 +90,7 @@
           "options": {
             "outputPath": "dist/server",
             "main": "src/main.server.ts",
-            "tsConfig": "tsconfig.server.json"
+            "tsConfig": "tsconfig.json"
           },
           "configurations": {
             "production": {
